--- a/CellExpanda/configs/sampleName.yaml
+++ b/CellExpanda/configs/sampleName.yaml
@@ -43,7 +43,7 @@ trainer_params:
   min_delta: 0.2
   patience: 50
   accelerator: "auto"
-  n_epochs: 5
+  n_epochs: 1000
   warmup_epochs: 50
   batch_size: 128
   lr_e: 0.0001
@@ -56,7 +56,7 @@ trainer_params:
 clustering_params:  
   alg: 'louvain'
   n_louvain: 10 
-  plot: 'tsne'
+  plot: 'tsne' # The emmbeddings of cells, another choice is "umap".
   
     
     
